# xbmc-pvr-addons

addons/: Makefile.am
addons/pvr.kartinatv/: Makefile.am
addons/pvr.kartinatv/addon/: addon.xml.in
addons/pvr.kartinatv/project/VS2010Express/: pvrclient_kartinatv.vcxproj  pvrclient_kartinatv.vcxproj.filters
addons/pvr.kartinatv/src/: client.cpp  kartinatvclient.cpp
project/VS2010Express/: xbmc-pvr-addons.sln
